feat: GitHub actions部署

--- a/source/_posts/微信短链.md
+++ b/source/_posts/微信短链.md
@@ -31,9 +31,9 @@ banner:
 | ---------- | -------- | ------------------------------------------------------------------- |
 | 获取 token | POST     | `https://api.weixin.qq.com/wxa/generate_urllink?access_token=token` |
 
-:::info
+{%note 注意
 此处的 token 必须在拼接至路径中
-:::
+%}
 
 传参须使用 json 格式，在 body 中传参
 
