feat: 文章简介更新

--- a/source/_posts/常用代码片段.md
+++ b/source/_posts/常用代码片段.md
@@ -1,7 +1,7 @@
 ---
 title: 常用代码片段
-tags: []
-categories: []
+tags: [js]
+categories: [js]
 poster:
   topic: 标题上方的小字
   headline: 大标题
@@ -12,6 +12,10 @@ description:
 cover:
 banner:
 ---
+
+整合一些一些常用的 js 代码片段
+
+<!-- more -->
 
 ## 数组去重
 
