--- a/source/_posts/2023年度计划.md
+++ b/source/_posts/2023年度计划.md
@@ -50,3 +50,5 @@ banner:
 {% checkbox checked:false 图片上传组件 %}
 {% checkbox checked:false crud 表格 %}
 {% checkbox checked:false 文件下载功能 %}
+
+> 还有掘金买的 30 多本小册，😂。希望有时间读完吧
