--- a/source/_posts/小程序接入微信支付.md
+++ b/source/_posts/小程序接入微信支付.md
@@ -1,7 +1,7 @@
 ---
 title: 小程序接入微信支付
-tags: [uniapp, 小程序]
-categories: [小程序]
+tags: [uniapp, 小程序, 支付]
+categories: [代码人生, 前端技术]
 poster:
   topic: 标题上方的小字
   headline: 大标题
