--- a/source/_posts/常用代码片段.md
+++ b/source/_posts/常用代码片段.md
@@ -1,7 +1,7 @@
 ---
 title: 常用代码片段
-tags: [js]
-categories: [js]
+tags: [JavaScript]
+categories: [代码人生, JavaScript]
 poster:
   topic: 标题上方的小字
   headline: 大标题
@@ -19,12 +19,8 @@ banner:
 
 ## 数组去重
 
-{% copy
-cosnt newArr = [...new Set(arr)]
-%}
-
 ```js
-
+cosnt newArr = [...new Set(arr)]
 ```
 
 ## 判断网页请求是 http 还是 https
