--- a/source/_posts/扫码获取微信抬头.md
+++ b/source/_posts/扫码获取微信抬头.md
@@ -1,7 +1,7 @@
 ---
 title: 扫码获取微信抬头
-tags: [uniapp, server, 公众号]
-categories: [公众号]
+tags: [uniapp, server, 公众号, 小程序]
+categories: [代码人生, 前端技术]
 poster:
   topic: 标题上方的小字
   headline: 大标题
