--- a/source/_posts/小程序简易请求数据封装.md
+++ b/source/_posts/小程序简易请求数据封装.md
@@ -1,7 +1,7 @@
 ---
 title: 小程序简易请求数据封装
 tags: [小程序, uniapp]
-categories: [小程序]
+categories: [代码人生, 前端技术]
 poster:
   topic: 标题上方的小字
   headline: 大标题
