style: 博物馆文章说明，添加哔哩哔哩专栏地址

--- a/source/_posts/大同博物馆游览留念.md
+++ b/source/_posts/大同博物馆游览留念.md
@@ -22,6 +22,8 @@ banner: /assets/posts/WechatIMG361.jpeg
 
 在 2023 年 2 月 2 日返家前，我们去大同博物馆参观了一下。博物馆里的北魏墓葬出土文物、原始人遗迹、恐龙等都很好看。下面是我在博物馆里拍的一些照片（共计 76 张）。
 
+{% note 备注 我的服务器配置很低，图片加载可能有些慢，你也可以去我的[哔哩哔哩专栏](https://www.bilibili.com/read/cv21761283)中去看 %}
+
 {% image /assets/posts/大同博物馆/P1000370.JPG  %}
 {% image /assets/posts/大同博物馆/P1000371.JPG  %}
 {% image /assets/posts/大同博物馆/P1000372.JPG  %}
