--- a/source/_posts/大同博物馆游览留念.md
+++ b/source/_posts/大同博物馆游览留念.md
@@ -24,6 +24,9 @@ banner: /assets/posts/WechatIMG361.jpeg
 
 {% note 备注 我的服务器配置很低，图片加载可能有些慢，你也可以去我的[哔哩哔哩专栏](https://www.bilibili.com/read/cv21761283)中去看 %}
 
+图片太大了，服务器有点撑不住了，先下线了。
+
+<!--
 {% image /assets/posts/大同博物馆/P1000370.JPG  %}
 {% image /assets/posts/大同博物馆/P1000371.JPG  %}
 {% image /assets/posts/大同博物馆/P1000372.JPG  %}
@@ -107,4 +110,4 @@ banner: /assets/posts/WechatIMG361.jpeg
 {% image /assets/posts/大同博物馆/P1000443.JPG  %}
 {% image /assets/posts/大同博物馆/P1000444.JPG  %}
 {% image /assets/posts/大同博物馆/P1000445.JPG  %}
-{% image /assets/posts/大同博物馆/P1000446.JPG  %}
+{% image /assets/posts/大同博物馆/P1000446.JPG  %} -->
