doc: sable文档更新-多级路由

--- a/source/wiki/sable/路由设置.md
+++ b/source/wiki/sable/路由设置.md
@@ -83,4 +83,7 @@ export default {
 
 ## 多级路由适配
 
-{% note color:dark TODO 目前只支持一级路由和二级路由的侧边栏自动生成，对多级路由的自动生成还待完成 %}
+多级路由适配已完成，可以根据路由配置文件自动生成多级菜单
+
+{% note color:cyan 说明 只有一个子菜单时，会平铺到父级菜单中 %}
+
