--- a/source/_posts/2023年度计划.md
+++ b/source/_posts/2023年度计划.md
@@ -20,7 +20,7 @@ banner:
 
 ## 学习计划
 
-{% checkbox checked:false 驾驶证 %}
+{% checkbox checked:true 驾驶证 %} 2023/04/13 完成
 {% checkbox checked:false JavaScript忍者秘籍 %}
 {% checkbox checked:false TypeScript类型进阶 %}
 {% checkbox checked:false vue3源码 %}
