docs: sable admin docs update

--- a/source/wiki/sable/代码精简.md
+++ b/source/wiki/sable/代码精简.md
@@ -3,6 +3,8 @@ layout: wiki
 wiki: sable
 title: 代码精简
 order: 200
+beaudar:
+  "issue-term": "Sable Admin"
 ---
 
 我们可以删除一些不需要的内容来完成对本系统体积的精简，这里我对每个模块需要删除的部分都列出来
