--- a/source/wiki/sable/路由设置.md
+++ b/source/wiki/sable/路由设置.md
@@ -3,6 +3,8 @@ layout: wiki
 wiki: sable
 title: 路由设置
 order: 100
+beaudar:
+  "issue-term": "Sable Admin"
 ---
 
 路由设置文件在 `/src/router/models/`
@@ -86,4 +88,3 @@ export default {
 多级路由适配已完成，可以根据路由配置文件自动生成多级菜单
 
 {% note color:cyan 说明 只有一个子菜单时，会平铺到父级菜单中 %}
-
