--- a/source/wiki/sable/项目配置.md
+++ b/source/wiki/sable/项目配置.md
@@ -3,6 +3,8 @@ layout: wiki
 wiki: sable
 title: 项目配置
 order: 1
+beaudar:
+  "issue-term": "Sable Admin"
 ---
 
 项目配置文件在 `config` 文件夹中，目前只有 `config.ts` 一个文件
