--- a/source/wiki/vscode/插件扩展.md
+++ b/source/wiki/vscode/插件扩展.md
@@ -158,6 +158,10 @@ Element UI 代码片段
 提供对 i18 的预览
 {% link https://marketplace.visualstudio.com/items?itemName=Lokalise.i18n-ally %}
 
+### Turbo Console Log
+
+使用快捷键`ctrl options ls`打印选中的值
+
 ## 服务器扩展
 
 有时我们需要连接服务器进行一些操作。我们可以下载对应的插件来直接操作服务器资源。下面的插件包含了 ftp 和 ssh 功能，可以直接连接服务器进行连接和文件上传。
