--- a/source/_posts/垃圾话.md
+++ b/source/_posts/垃圾话.md
@@ -2,11 +2,6 @@
 title: 垃圾话
 tags: []
 categories: [生活剪影, 垃圾话]
-# poster:
-#   topic: 标题上方的小字
-#   headline: 大标题
-#   caption: 标题下方的小字
-#   color: 标题颜色
 date: 2023-10-22 01:21:19
 description:
 cover: /assets/posts/垃圾话.webp
@@ -19,6 +14,11 @@ pin: true
 <!-- more -->
 
 {% timeline %}
+
+<!-- node 2023 年 10 月 24 日 19:33-->
+
+面试出来，秋风拂面，感觉真舒服啊。恍惚间回到了 19 年，在学校中真的是初生牛犊不怕虎。现在的我却有着越来越多担心的事了。{% emoji blobcat blobcatfacepalm
+%}
 
 <!-- node 2023 年 10 月 22 日 01:24-->
 
