--- a/source/_posts/垃圾话.md
+++ b/source/_posts/垃圾话.md
@@ -15,6 +15,12 @@ pin: true
 
 {% timeline %}
 
+<!-- node 2023 年 11 月 19 日 20:25-->
+
+家里的催婚越来越严重了 {% emoji blobcat blobcatdied %}
+
+如果为了结婚而结婚，这又有什么意义呢？
+
 <!-- node 2023 年 10 月 24 日 19:33-->
 
 面试出来，秋风拂面，感觉真舒服啊。恍惚间回到了 19 年，在学校中真的是初生牛犊不怕虎。现在的我却有着越来越多担心的事了。{% emoji blobcat blobcatfacepalm
