--- a/source/_posts/对接下来生活的一些思考.md
+++ b/source/_posts/对接下来生活的一些思考.md
@@ -7,9 +7,7 @@ poster:
   headline: 大标题
   caption: 标题下方的小字
   color: 标题颜色
-# references:
-#   - title: ""
-#     url: ""
+references:
 date: 2023-06-18 13:09:51
 description:
 cover:
@@ -32,6 +30,4 @@ banner:
 
 我想，是不是可以尝试一下？我有没有足够的勇气来干这件事？开始做事后会不会坚持下来呢？？？
 
-<iframe src="//player.bilibili.com/player.html?aid=551877269&bvid=BV1pi4y1y77n&cid=540549460&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width:100%;min-height:315px"> </iframe>
-
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/vMnQDhnGiqM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+{% video bilibili:BV1pi4y1y77n %}
