--- a/source/_posts/视频网站封面图.md
+++ b/source/_posts/视频网站封面图.md
@@ -8,12 +8,9 @@ poster:
   caption: 标题下方的小字
   color: 标题颜色
 references:
-  - title: "B站, 及各大视频平台，封面制作：封面大小及调整【Gimp教程】"
-    url: "https://www.bilibili.com/video/BV1nL411j71s/?vd_source=6e32730b05dc719c9f21598867bef69d"
-  - title: 【猴子都能学会】vup切片视频封面教学分享
-    url: https://www.bilibili.com/video/BV17S4y1b7NS/?spm_id_from=333.788.recommend_more_video.6&vd_source=6e32730b05dc719c9f21598867bef69d
-  - title: 只用套模板，十分钟速成直播封面、ui、九宫格、活动长图大全套
-    url: https://www.bilibili.com/video/BV1eG4y1k73N/?spm_id_from=333.788.recommend_more_video.6&vd_source=6e32730b05dc719c9f21598867bef69d
+  - '["B站, 及各大视频平台，封面制作：封面大小及调整【Gimp教程】"](https://www.bilibili.com/video/BV1nL411j71s/?vd_source=6e32730b05dc719c9f21598867bef69d)'
+  - "[【猴子都能学会】vup切片视频封面教学分享](https://www.bilibili.com/video/BV17S4y1b7NS/?spm_id_from=333.788.recommend_more_video.6&vd_source=6e32730b05dc719c9f21598867bef69d)"
+  - "[只用套模板，十分钟速成直播封面、ui、九宫格、活动长图大全套](https://www.bilibili.com/video/BV1eG4y1k73N/?spm_id_from=333.788.recommend_more_video.6&vd_source=6e32730b05dc719c9f21598867bef69d)"
 date: 2022-12-08 22:15:26
 description:
 cover:
