--- a/source/_posts/2024目标.md
+++ b/source/_posts/2024目标.md
@@ -57,6 +57,11 @@ Vue.js 补强
 {% checkbox  Sable 项目补全 %}
 {% checkbox  源码部分文章阅读 %}
 
+<!-- okr kr-5 percent:0 -->
+
+网页设计软件入门
+{% checkbox  Figma %}
+
 {% endokr %}
 
 ---
