--- a/source/_posts/2024目标.md
+++ b/source/_posts/2024目标.md
@@ -3,14 +3,14 @@ title: 2024目标
 tags: []
 categories: []
 poster:
-  topic: 标题上方的小字
-  headline: 大标题
-  caption: 标题下方的小字
+  # topic: 标题上方的小字
+  headline: 2024小目标
+  caption: 痴人说梦罢了
   color: 标题颜色
 references:
 date: 2024-01-14 21:32:45
 description:
-cover:
+cover: /assets/posts/2024-plan.jpg
 banner:
 ---
 
@@ -79,7 +79,6 @@ Vue.js 补强
 强身健体
 
 - 练习金刚经
-- 俯卧撑练习
 
 <!-- okr kr3 percent:0 -->
 
