--- a/source/_posts/2024目标.md
+++ b/source/_posts/2024目标.md
@@ -6,7 +6,7 @@ poster:
   # topic: 标题上方的小字
   headline: 2024小目标
   caption: 痴人说梦罢了
-  color: 标题颜色
+  color: #fff
 references:
 date: 2024-01-14 21:32:45
 description:
