--- a/source/_posts/2024目标.md
+++ b/source/_posts/2024目标.md
@@ -11,10 +11,10 @@ references:
 date: 2024-01-14 21:32:45
 description:
 cover: /assets/posts/2024-plan.jpg
-banner:
+banner: /assets/posts/2024-plan.jpg
 ---
 
-每月更新一次，逼迫自己前进
+每月更新一次
 
 <!-- more -->
 
