--- a/source/_posts/近况说明.md
+++ b/source/_posts/近况说明.md
@@ -36,3 +36,7 @@ references:
 对了，近几个月，我迷上了八字命理。哈哈哈，人未到中年确已相信命运之说。我曾听人言：『多会你没有了斗志，就说明你已经老了』。
 
 我一定会重新燃起斗志，继续奋斗。哥们好日子还没过过呢，我不甘心就这样了。
+
+---
+
+对了，今天新闻：特朗普被枪击了！
