--- a/source/wiki/vscode/工具网站.md
+++ b/source/wiki/vscode/工具网站.md
@@ -7,3 +7,7 @@ title: 工具网站
 vscode 代码片段生成
 
 {%link https://snippet-generator.app/?description=&tabtrigger=&snippet=&mode=vscode %}
+
+## 二维码生成库
+
+https://qr-x.devtrice.dev/
