--- a/source/wiki/vscode/美化.md
+++ b/source/wiki/vscode/美化.md
@@ -8,7 +8,7 @@ title: 编辑器美化
 
 ### Vitesse Theme
 
-这个是 vue 团队出品的主题，包含亮色和暗色两种主题。
+这个是 vue 团队成员 [Anthony Fu](https://antfu.me/) 出品的主题，包含亮色和暗色两种主题。
 
 {% link https://marketplace.visualstudio.com/items?itemName=antfu.theme-vitesse %}
 
@@ -37,3 +37,11 @@ title: 编辑器美化
 {% link https://marketplace.visualstudio.com/items?itemName=antfu.icons-carbon %}
 
 ![](/assets/wiki/vscode/preview.png)
+
+### Catppuccin Icons for VSCode
+
+**非常可爱的一款图标主题**
+
+{% link https://marketplace.visualstudio.com/items?itemName=Catppuccin.catppuccin-vsc-icons %}
+
+![](/assets/wiki/vscode/CatppuccinVSCodeIcon.webp)
